add several FAQ list

--- a/index.html
+++ b/index.html
@@ -126,6 +126,48 @@
                     Call Center: 1-500-607</p>
             </div>
         </div>
+
+        <div class="faq-item">
+            <div class="faq-question"><strong style="padding-right:40px;">16. Bagaimana partner dan mitra CariParkir terkait dengan penutupan aplikasi ini?</strong><i class="fa fa-plus-circle" style="font-size:24px;color: #fecc06;float:right;"></i></div>
+            <div class="faq-answer">
+                <p>Seluruh partner dan mitra CariParkir telah kami informasikan secara resmi terkait dengan penutupan aplikasi CariParkir dengan tetap mengikuti kesepakatan yang berlaku dari masing-masing partner dan mitra.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question"><strong style="padding-right:40px;">17. Apakah administrasi dan keuangan yang tertangguhkan dapat diselesaikan dengan adanya penutupan aplikasi ini?</strong><i class="fa fa-plus-circle" style="font-size:24px;color: #fecc06;float:right;"></i></div>
+            <div class="faq-answer">
+                <p>Segala bentuk penyelesaian administrasi dan keuangan yang menjadi tanggung jawab CariParkir akan diselesaikan sebelum 31 Agustus 2023</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question"><strong style="padding-right:40px;">18. Apakah bisnis/organisasi terkait akan terkena dampak penutupan ini?</strong><i class="fa fa-plus-circle" style="font-size:24px;color: #fecc06;float:right;"></i></div>
+            <div class="faq-answer">
+                <p>Tidak ada bisnis/organisasi terkait dengan CariParkir yang terkena dampak dari penutupan ini.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question"><strong style="padding-right:40px;">19. Apakah ada kemungkinan aplikasi CariParkir akan dibuka kembali untuk pengguna?</strong><i class="fa fa-plus-circle" style="font-size:24px;color: #fecc06;float:right;"></i></div>
+            <div class="faq-answer">
+                <p>Kami belum dapat memastikan hal tersebut.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question"><strong style="padding-right:40px;">20. Apakah karyawan terkena dampak dari penutupan aplikasi ini?</strong><i class="fa fa-plus-circle" style="font-size:24px;color: #fecc06;float:right;"></i></div>
+            <div class="faq-answer">
+                <p>Karyawan CariParkir tidak mengalami dampak negatif dari penutupan aplikasi CariParkir.</p>
+            </div>
+        </div>
+
+        <div class="faq-item">
+            <div class="faq-question"><strong style="padding-right:40px;">21. Apakah pengguna dapat mengambil atau mendapatkan kembali histori transaksi mereka setelah penutupan aplikasi?</strong><i class="fa fa-plus-circle" style="font-size:24px;color: #fecc06;float:right;"></i></div>
+            <div class="faq-answer">
+                <p>Pengguna sudah tidak dapat mengambil atau mendapatkan histori transaksi mereka setelah 31 Juli 2023.</p>
+            </div>
+        </div>
         
 
     </div>
